--- a/package.json
+++ b/package.json
@@ -3,12 +3,31 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@devexpress/dx-core": "^2.7.6",
+    "@devexpress/dx-react-chart": "^2.7.6",
+    "@devexpress/dx-react-chart-material-ui": "^2.7.6",
+    "@devexpress/dx-react-core": "^2.7.6",
+    "@material-ui/core": "^4.12.3",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.21.1",
+    "bootstrap": "^5.1.0",
+    "chart.js": "^3.5.1",
+    "history": "^5.0.1",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.0-beta.6",
+    "react-bootstrap-modal": "^4.2.0",
+    "react-chartjs-2": "^3.0.4",
+    "react-datepicker": "^4.2.1",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
+    "react-moment": "^1.1.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-use-window-sessionstorage": "^1.0.9",
+    "recharts": "^2.1.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
